// Copyright 2024 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package rmad;

message RmadConfig {
  optional bool skip_update_ro_firmware_from_rootfs = 1;
  optional bool skip_hardware_verification = 2;
  optional bool dynamic_device_info_inputs = 3;
}
